bug: fix profile bug

--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "stripe": "^6.15.0"
   },
   "devDependencies": {},
-  "description": ""
+  "description": "This repo is for my Software Engineering Practice module."
 }
